css tweaks so we don't need a fixed width for span.summary, which caused undesired line wrapping.  also changed a couple more places to use span.summary instead of <br/>'s
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@11065 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/classic/theme.css
+++ b/themes/classic/theme.css
@@ -275,7 +275,7 @@ body.gallery {
     color: #888;
 }
 
-.giInfo span {
+.giInfo span.summary {
     display: block;
 }
 
@@ -287,16 +287,11 @@ body.gallery {
 .giWarning { color: #c50; }
 .giError { color: #a44; }
 
-div.block-core-ItemInfo span.summary {
-  margin: 0 2px 2px 0;
-  width: 60px;
-}
-
 .giNew, .giUpdated {
     border-width: 2px;
     border-style: ridge;
-    padding: 0 0 0 8px;
-    line-height: 1.4em;
+    padding: 0 6px;
+    line-height: 1.9em;
 }
 
 #gsNavBar div.gbBreadCrumb {
