--- a/themes/slider/theme.css
+++ b/themes/slider/theme.css
@@ -333,7 +333,7 @@ body.gallery {
     color: #888;
 }
 
-.giInfo span {
+.giInfo span.summary {
     display: block;
 }
 
@@ -345,17 +345,11 @@ body.gallery {
 .giWarning { color: #c50; }
 .giError { color: #a44; }
 
-div.block-core-ItemInfo span.summary {
-  width: 60px;
-  margin: auto;
-}
-
 .giNew, .giUpdated {
-    width: 60px;
     border-width: 2px;
     border-style: ridge;
     padding: 0 3px;
-    line-height: 1.4em;
+    line-height: 1.9em;
 }
 
 #gsNavBar div.gbBreadCrumb {
